--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -20,7 +20,14 @@ body{
 
 @media (min-width: 1000px) {
   #quizBox{
-    height: 45vh;
+    min-height: 45vh;
     width: 30vw;
+  }
+}
+
+@media (max-width: 600px) {
+  #quizBox{
+    min-height: 45vh;
+    width: 90vw;
   }
 }
