--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -39,3 +39,11 @@ body{
     width: 90vw;
   }
 }
+
+.headerGrid{
+  display: grid;
+  grid-template-columns: 250px 1fr 200px;
+  grid-template-rows: 10rem;
+}
+
+
