--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -46,4 +46,13 @@ body{
   grid-template-rows: 10rem;
 }
 
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 300,
+  'GRAD' 0,
+  'opsz' 24
+}
+
+
 
