--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -54,5 +54,18 @@ body{
   'opsz' 24
 }
 
+.textShadow{
+  text-shadow: 3px 3px 5px rgba(137,243,54,0.6);
+}
 
+input{background-color: transparent;}
+
+input:focus{
+  outline: none;
+}
+
+select:focus{
+  background-color: transparent;
+  outline: none;
+}
 
