--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -42,8 +42,13 @@ body{
 
 .headerGrid{
   display: grid;
-  grid-template-columns: 250px 1fr 200px;
+  grid-template-areas: 'nav header darkmode';
+  grid-template-columns: 1fr 4fr 1fr;
   grid-template-rows: 10rem;
+}
+
+#headerCenter{
+  grid-area: header;
 }
 
 .material-symbols-outlined {
